[package]
name = "Caching"
version = "0.1.0"
edition = "2021"
description = "A Caching libary"
license = "GPL-2.0-only"
repository = "https://github.com/Benn1x/Caching"
authors = ["Benn1x"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
